# cocli

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DESIGN.md  GOVERNANCE.md  LICENSE  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  TRADEMARK.md  rust-toolchain.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.specstory/: .project.json  statistics.json
crates/cocli-actor/: Cargo.toml
crates/cocli-actor/src/: actor.rs  error.rs  lib.rs  supervisor.rs
crates/cocli-actor/tests/: supervisor.rs
crates/cocli-agent/: Cargo.toml
crates/cocli-agent/src/: actor.rs  context.rs  fork_reason.rs  format.rs  lib.rs  metrics.rs  obs.rs  prompt.rs  queue.rs  recovery.rs  router.rs  state.rs  types.rs  watchdog.rs  working.rs  workspace.rs
crates/cocli-agent/tests/: runtime_contract.rs  working.rs  workspace.rs
crates/cocli-api/: Cargo.toml
crates/cocli-api/src/: lib.rs  mcp_http.rs  skill_apply.rs  skill_apply_http.rs  skill_governance.rs  skill_governance_http.rs  skill_http.rs  skill_import.rs  skill_managed_http.rs
crates/cocli-api/tests/: governance_integration.rs  local_loop.rs  workspace_foundation.rs
crates/cocli-bridge-config/: Cargo.toml  actions.manifest.json
crates/cocli-bridge-config/src/: action_inject.rs  action_manifest.rs  action_wrapper.rs  lib.rs
crates/cocli-bridge-config/tests/: config.rs
crates/cocli-driver/: Cargo.toml
crates/cocli-driver-chatrs/: Cargo.toml
crates/cocli-driver-chatrs/src/: conv.rs  driver.rs  events.rs  lib.rs  spawn.rs  stdin.rs
crates/cocli-driver-chatrs/tests/: driver_impl.rs  parse.rs
crates/cocli-driver-claude/: Cargo.toml
crates/cocli-driver-claude/src/: conv.rs  driver.rs  events.rs  lib.rs  process.rs  spawn.rs  stdin.rs
crates/cocli-driver-claude/tests/: driver_impl.rs  driver_smoke.rs  event_bridge.rs  parse.rs  spawn_args.rs
crates/cocli-driver-core/: Cargo.toml  README.md
crates/cocli-driver-core/src/: driver.rs  error.rs  event.rs  headless.rs  lib.rs  mcp.rs  mcp_adapter_sdk.rs  mcp_bundle.rs  mcp_governance.rs  subtraits.rs  types.rs
crates/cocli-driver-core/tests/: factory.rs  mcp_adapter_sdk.rs  subtraits.rs  trait_object.rs  types.rs
crates/cocli-driver-gemini/: Cargo.toml
crates/cocli-driver-gemini/examples/: dump_settings.rs
crates/cocli-driver-gemini/src/: conv.rs  driver.rs  events.rs  lib.rs  spawn.rs  stdin.rs
crates/cocli-driver-gemini/tests/: driver_impl.rs  parse.rs
crates/cocli-driver-kimi/: Cargo.toml
crates/cocli-driver-kimi/src/: conv.rs  driver.rs  events.rs  lib.rs  spawn.rs
crates/cocli-driver-kimi/tests/: driver_impl.rs  parse.rs  spawn_args.rs
crates/cocli-driver-opencode/: Cargo.toml
crates/cocli-driver-opencode/src/: driver.rs  events.rs  lib.rs  spawn.rs
crates/cocli-driver-opencode/tests/: parse.rs  spawn_args.rs
crates/cocli-driver/src/: context.rs  error.rs  event.rs  lib.rs  paths.rs  traits.rs
crates/cocli-driver/tests/: context_smoke.rs  error_types.rs  event_variants.rs  paths.rs
crates/cocli-health/: Cargo.toml
crates/cocli-health/src/: lib.rs
crates/cocli-health/tests/: health.rs
crates/cocli-pidfile/: Cargo.toml
crates/cocli-pidfile/src/: lib.rs
crates/cocli-pidfile/tests/: pidfile.rs
crates/cocli-plugin/: Cargo.toml
crates/cocli-plugin-sdk/: Cargo.toml
crates/cocli-plugin-sdk/src/: lib.rs
crates/cocli-plugin/src/: lib.rs
crates/cocli-protocol/: Cargo.toml
crates/cocli-protocol/src/: daemon_msg.rs  lib.rs  server_msg.rs  types.rs
crates/cocli-protocol/tests/: roundtrip.rs
crates/cocli-protocol/tests/fixtures/: agent_activity.json  agent_deliver.json  agent_deliver_accepted.json  agent_deliver_ack.json  agent_recover_sessions.json  agent_recovery_record.json  agent_session.json  agent_session_end.json  agent_session_idle.json  agent_start.json  agent_status.json  agent_stop.json  agent_stop_error.json  agent_turn.json  agent_turn_cancel.json  daemon_recover.json  ping.json  ready.json  server_shutdown.json
crates/cocli-reaper/: Cargo.toml
crates/cocli-reaper/src/: lib.rs
crates/cocli-reaper/tests/: reaper.rs
crates/cocli-runtime-pool/: Cargo.toml  README.md
crates/cocli-runtime-pool/src/: catalog.rs  discovery.rs  lib.rs  models.rs
crates/cocli-runtime-pool/tests/: discovery.rs  registry.rs
crates/cocli-server/: Cargo.toml
crates/cocli-server/src/: lib.rs  mcp.rs  runtime.rs  skills.rs
crates/cocli-store/: Cargo.toml
crates/cocli-store/migrations/: 0001_local_loop.sql  0002_delivery_queue.sql  0003_agent_bridge_state.sql  0004_tasks.sql  0005_runtime_history.sql  0006_wiki.sql  0007_skills.sql  0008_bridge_security.sql  0009_agent_channel_ontology.sql  0010_subject_profiles_and_operations.sql  0011_memory_documents.sql  0012_portable_workspace_foundation.sql  0013_mcp_governance_phase_2a.sql  0013_skill_governance.sql  0014_mcp_governance_phase_2b.sql  0015_mcp_governance_phase_2c.sql  0016_mcp_governance_phase_3a.sql  0018_skill_governance_apply_state.sql  0019_skill_governance_managed_scopes.sql
crates/cocli-store/src/: lib.rs  mcp_apply.rs  mcp_bundle.rs  mcp_governance.rs  memory.rs  skill_governance.rs  skills.rs  wiki.rs  workspace.rs
crates/cocli-store/tests/: bridge_state.rs  delivery_queue.rs  governance_migrations.rs  mcp_apply.rs  mcp_bundle.rs  mcp_governance.rs  memory.rs  persistence.rs  runtime_history.rs  skill_governance.rs  skills.rs  tasks.rs  wiki.rs  workspace_foundation.rs
crates/cocli-web/: Cargo.toml  build.rs
crates/cocli-web/src/: lib.rs
crates/cocli-ws/: Cargo.toml
crates/cocli-ws/src/: lib.rs
docs/: AGENT_STARTER.md  LANDING.md  LAND_PLAN.md  SUPPORT_MATRIX.md  governance-integration.md  mcp-adapter-sdk-conformance.md  mcp-adapter-sdk.md  mcp-governance-phase-1.md  mcp-governance-phase-2a.md  mcp-governance-phase-2b.md  mcp-governance-phase-2c.md  mcp-governance-phase-3a.md  runtime-ownership.md  skill-governance-phase-3a.md  skill-governance-phase-3b.md  skill-governance-phase-3c.md
omx_wiki/: cocli-self-bootstrap.md  execution-goal-workspace-foundation.md  index.md  log.md  (+3 more)
(+375 files in other folders)
