[workspace]
resolver = "2"
members = [
    "crates/cocli-protocol",
    "crates/cocli-actor",
    "crates/cocli-pidfile",
    "crates/cocli-reaper",
    "crates/cocli-driver-core",
    "crates/cocli-runtime-pool",
    "crates/cocli-driver-claude",
    "crates/cocli-driver-cursor",
    "crates/cocli-driver-codex",
    "crates/cocli-driver-gemini",
    "crates/cocli-driver-kimi",
    "crates/cocli-driver-grok",
    "crates/cocli-driver-chatrs",
    "crates/cocli-driver-opencode",
    "crates/cocli-bridge-config",
    "crates/cocli-agent",
    "crates/cocli-health",
    "crates/cocli-store",
    "crates/cocli-api",
    "crates/cocli-ws",
    "crates/cocli-server",
    "crates/cocli-web",
    "crates/cocli-plugin",
    "crates/cocli-plugin-sdk",
    "bin/cocli",
    "bin/cocli-bridge",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yixian-huang/cocli"
authors = ["yixian.huang <yixian.huang.cn@gmail.com>"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "=1.10.0", features = ["v4", "serde"] }
async-trait = "0.1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
sysinfo = "0.30"
nix = { version = "0.27", features = ["signal"] }
dirs = "5"
clap = { version = "=4.5.23", features = ["derive", "env"] }
url = "=2.5.2"
native-tls = "=0.2.12"
security-framework = "=2.11.1"
tempfile = "=3.10.1"
base64 = "0.22"
# Keep rayon on a known-good line; cocli-reaper declares these as direct
# deps so the pin reaches the resolver (also transitively via sysinfo).
rayon = "=1.10.0"
rayon-core = "=1.12.1"
axum = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono", "uuid", "json"] }
rust-embed = "=8.12.0"
mime_guess = "2"
argon2 = "0.5"
rand = "0.8"
futures = "0.3"
sha2 = "=0.10.8"
unicode-normalization = "=0.1.25"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
incremental = true
