[package]
name              = "cocli-actor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio       = { workspace = true }
async-trait = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
