[package]
name = "cocli-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "REST/HTTP API handlers (axum) for cocli local"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
cocli-store = { path = "../cocli-store" }
tempfile = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
