[package]
name              = "cocli-bridge-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
url        = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
