[package]
name              = "cocli-bridge-config"
version           = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description       = "Shared cocli bridge configuration and agent action CLI injection"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
url        = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
