[package]
name              = "cocli-driver-chatrs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cocli-driver-core   = { path = "../cocli-driver-core" }
cocli-bridge-config = { path = "../cocli-bridge-config" }

tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
thiserror   = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
