[package]
name = "cocli-driver-claude"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Claude CLI driver: stream-json parser + stdin encoder + child process management"

[dependencies]
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
thiserror  = { workspace = true }
