[package]
name              = "cocli-driver-claude"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
thiserror  = { workspace = true }
cocli-driver = { path = "../cocli-driver" }
async-trait  = { workspace = true }
nix          = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
