[package]
name              = "cocli-driver-gemini"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cocli-driver-core   = { path = "../cocli-driver-core" }
cocli-bridge-config = { path = "../cocli-bridge-config" }

tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
thiserror   = { workspace = true }
async-trait = { workspace = true }
dirs        = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
dirs     = { workspace = true }

[[example]]
name = "dump_settings"
path = "examples/dump_settings.rs"
