[package]
name              = "cocli-driver-gemini"
version           = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description       = "Gemini CLI runtime adapter for cocli"

[dependencies]
cocli-driver-core   = { version = "0.1.0", path = "../cocli-driver-core" }
cocli-bridge-config = { version = "0.1.0", path = "../cocli-bridge-config" }

tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
thiserror   = { workspace = true }
async-trait = { workspace = true }
dirs        = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
dirs     = { workspace = true }

[[example]]
name = "dump_settings"
path = "examples/dump_settings.rs"
