[package]
name              = "cocli-driver-kimi"
version           = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description       = "Kimi Code CLI runtime adapter for cocli"

[dependencies]
cocli-driver-core = { version = "0.1.0", path = "../cocli-driver-core" }
cocli-bridge-config = { version = "0.1.0", path = "../cocli-bridge-config" }

dirs        = { workspace = true }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }
thiserror   = { workspace = true }
async-trait = { workspace = true }
uuid        = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true }
