[package]
name              = "cocli-driver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description       = "Driver trait + shared types for cocli runtime adapters"

[dependencies]
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
nix         = { workspace = true }
