[package]
name = "cocli-health"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Idle detection actor — emits agent:session:idle on threshold cross"

[dependencies]
cocli-protocol = { path = "../cocli-protocol" }
cocli-actor    = { path = "../cocli-actor" }
cocli-agent    = { path = "../cocli-agent" }

tokio       = { workspace = true }
async-trait = { workspace = true }
tracing     = { workspace = true }
uuid        = { workspace = true }
tempfile    = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
