[package]
name              = "cocli-health"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cocli-protocol = { path = "../cocli-protocol" }
cocli-actor    = { path = "../cocli-actor" }
cocli-agent    = { path = "../cocli-agent" }

tokio       = { workspace = true }
async-trait = { workspace = true }
tracing     = { workspace = true }
uuid        = { workspace = true }
tempfile    = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
