[package]
name = "cocli-pidfile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pidfile read/write/sanitize aligned with Go daemon chatrs namespace"

[dependencies]
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
