[package]
name = "cocli-plugin-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Rust SDK for cocli plugin authors (re-export of cocli-plugin types + connect helper)"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
cocli-plugin = { path = "../cocli-plugin" }
