[package]
name = "cocli-plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Plugin protocol (Unix/Pipe/TCP socket listener + LDJSON wire format)"

[dependencies]
# Heavy deps (argon2 etc.) added when M0.1.0 implementation lands.
# Placeholder only needs the crate to compile on Cargo 1.78 (toolchain pin).
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
