[package]
name              = "cocli-reaper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cocli-pidfile = { path = "../cocli-pidfile" }
sysinfo       = { workspace = true }
tracing       = { workspace = true }
# Direct dep so the workspace pin reaches sysinfo's resolver.
rayon         = { workspace = true }
rayon-core    = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lib]
doctest = false
