[package]
name              = "cocli-runtime-pool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cocli-driver-core = { path = "../cocli-driver-core" }

[dev-dependencies]
async-trait         = { workspace = true }
tokio               = { workspace = true }
cocli-driver-claude = { path = "../cocli-driver-claude" }
cocli-driver-cursor = { path = "../cocli-driver-cursor" }
cocli-driver-codex  = { path = "../cocli-driver-codex" }
cocli-driver-gemini = { path = "../cocli-driver-gemini" }
